--- a/mission-02/client/index.html
+++ b/mission-02/client/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <script src="./js/data.js" defer></script>
-  <script src="./js/getNode.js" defer></script>
-  <script src="./js/main.js" defer></script>
+  <script src="./js/main-2.js" defer></script>
+  <!-- <script src="./js/getNode.js" defer></script>
+  <script src="./js/main.js" defer></script> -->
   <title>Elemental Movie Poster</title>
 </head>
 <body>
